--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ theme: minima
 title: Leetcode Solution
 
 disqus:
-  shortname: blog-hpksa7ezhy
+  shortname: leetcode-solution
 
 google_analytics: UA-39175404-1
